[Improvement] Add JDK8+ support for `optimizer.sh` (#3702)
[Improvement] Add jvm parameter to optimizer.sh